<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboardDMI"
            android:icon="@drawable/dashboard_cyan"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/profileDMI"
            android:icon="@drawable/profile_cyan"
            android:title="@string/profile" />

        <item
            android:id="@+id/incomeDMI"
            android:visible="false"
            android:icon="@drawable/income_cyan"
            android:title="@string/income" />

    </group>

    <item android:title="Service">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/appointmentDMI"
                    android:icon="@drawable/appoint_cyan"
                    android:title="@string/appointments" />

                <item
                    android:id="@+id/messagesDMI"
                    android:icon="@drawable/message_cyan"
                    android:title="@string/message" />

                <item
                    android:id="@+id/homeServiceDMI"
                    android:icon="@drawable/home_cyan"
                    android:title="@string/home_service" />

                <item
                    android:id="@+id/audioCallDMI"
                    android:icon="@drawable/audio_cyan"
                    android:title="@string/audio_call" />
            </group>
        </menu>
    </item>

    <item android:title="More">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/prescriptionPatientDMI"
                    android:icon="@drawable/prescription_cyan"
                    android:title="@string/prescription" />

                <item
                    android:id="@+id/blogDMI"
                    android:icon="@drawable/blog_cyan"
                    android:title="@string/blog"
                    />

                <item
                    android:id="@+id/assistantDMI"
                    android:icon="@drawable/assistant_cyan"
                    android:title="@string/assistant"
                    />
            </group>
        </menu>
    </item>

    <item android:title="Others">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/prefernceDMI"
                    android:icon="@drawable/preference_cyan_0"
                    android:title="@string/preference" />
            </group>

            <item
                android:id="@+id/signOutDMI"
                android:icon="@drawable/signout_cyan_dk"
                android:title="@string/sign_out"
                />
        </menu>
    </item>

</menu>