<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_auth"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Sign In Layout -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/signInCL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageIconSiIV"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/general_image"
            android:scaleType="fitCenter"
            android:src="@drawable/image_icon_new"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/signInIV"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/general_image"
            android:scaleType="fitCenter"
            android:src="@drawable/sign_in_icon_shadow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageIconSiIV" />

        <EditText
            android:id="@+id/emailSiET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/edittext_round_white"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/email_white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInIV" />

        <EditText
            android:id="@+id/passwordSiET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_round_white"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/key_white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailSiET" />

        <Button
            android:id="@+id/signInBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/btn_style_cyan"
            android:elevation="3dp"
            android:padding="12dp"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordSiET" />

        <TextView
            android:id="@+id/forgetPasswordTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/forget_password"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInBTN" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>