<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/bgRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bg_cyan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/doctorProfilePicCIV"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/noprofilepic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/doctorNameTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/developer_name"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctorProfilePicCIV" />

    <TextView
        android:id="@+id/doctorTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Doctor"
        android:textAlignment="center"
        android:textColor="@color/colorLightGray"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/nestedScrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctorNameTV" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bgRelativeLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="2dp">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/detailCL"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/mailIV"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/mail_image"
                        android:src="@drawable/mail_cyan_dk"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/doctorEmailTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/developer_email"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        android:lines="1"
                        android:ellipsize="end"
                        app:layout_constraintBottom_toBottomOf="@+id/mailIV"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/mailIV"
                        app:layout_constraintTop_toTopOf="@+id/mailIV" />

                    <ImageView
                        android:id="@+id/phoneIV"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/phone_image"
                        android:src="@drawable/phone_cyan_dk"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/mailIV" />

                    <TextView
                        android:id="@+id/doctorPhoneTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/developer_phone"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        android:lines="1"
                        android:ellipsize="end"
                        app:layout_constraintBottom_toBottomOf="@+id/phoneIV"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/phoneIV"
                        app:layout_constraintTop_toTopOf="@+id/phoneIV" />

                    <ImageView
                        android:id="@+id/chemberIV"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/home_image"
                        android:src="@drawable/doctor_chember_cyan"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/phoneIV" />

                    <TextView
                        android:id="@+id/doctorChamberTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/developer_home"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        android:lines="1"
                        android:ellipsize="end"
                        app:layout_constraintBottom_toBottomOf="@+id/chemberIV"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/chemberIV"
                        app:layout_constraintTop_toTopOf="@+id/chemberIV" />

                    <ImageView
                        android:id="@+id/specialistIV"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/home_image"
                        android:src="@drawable/doc_cyan_dk"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/chemberIV" />

                    <TextView
                        android:id="@+id/doctorSpecialistTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/cardiologist"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        android:lines="1"
                        android:ellipsize="end"
                        app:layout_constraintBottom_toBottomOf="@+id/specialistIV"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/specialistIV"
                        app:layout_constraintTop_toTopOf="@+id/specialistIV" />

                    <ImageView
                        android:id="@+id/cityIV"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/flag_image"
                        android:src="@drawable/flag_cyan_dk"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/specialistIV" />

                    <TextView
                        android:id="@+id/doctorCountryTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/bangladesh"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        android:lines="1"
                        android:ellipsize="end"
                        app:layout_constraintBottom_toBottomOf="@+id/cityIV"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/cityIV"
                        app:layout_constraintTop_toTopOf="@+id/cityIV" />

                    <ImageView
                        android:id="@+id/hospitalIV"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/hospital"
                        android:src="@drawable/hospital_cyan"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cityIV" />

                    <TextView
                        android:id="@+id/doctorHospitalTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/hospital"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        android:lines="1"
                        android:ellipsize="end"
                        app:layout_constraintBottom_toBottomOf="@+id/hospitalIV"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/hospitalIV"
                        app:layout_constraintTop_toTopOf="@+id/hospitalIV" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom_line_cyan"
                        android:padding="8dp"
                        android:text="About"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/doctorAboutTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="about the doctor"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>